hphp/test/zend/good/zend/foreach_list_004.php
<?php

$array = [['a', 'b'], 'c', 'd'];

foreach($array as $key => list()) {
}

?>